--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <title>COUNTER</title>
 </head>
 
 <body>
-
+  <script type="text/javascript" src="index.js"></script>
+  <header class="header">
+    <h1>COUNTER</h1>
+  </header>
+  <section>
+    <p class="counter">0</p>
+    <button class="counterButton" onclick="decrement()">decrement</button>
+    <button class="counterButton" onclick="restart()">restart</button>
+    <button class="counterButton" onclick="increment()">increment</button>
+  </section>
 </body>
 
 </html>
